helm/monitoring/manifests-gke/grafana-ingressroute.yaml
# helm/monitoring/manifests-gke/grafana-ingressroute.yaml
# Public ingress for Grafana on GKE. Mirrors the AKS variant in manifests-aks/
# with the gke.trakrf.app host.
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/part-of: kube-prometheus-stack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.gke.trakrf.app`)
      kind: Rule
      middlewares:
        - name: default-chain
          namespace: traefik
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls: {}
